Fixed aligning unread message icons in inbox

--- a/scripts/beyond.css
+++ b/scripts/beyond.css
@@ -47,6 +47,10 @@
 	opacity: 1.2;
 }
 
+.unread {
+	padding-left: 27px;
+}
+
 .tracker, .NRinfo, .BRCinfo {
 	color: #FFFFFF;
 	box-shadow: 2px 2px 2px 2px #1B1B1B;
